[package]
name = "brewfatherlog"
description = "Log temperatures from grainfather fermenters to brewfather"
version = "0.1.0-pre"
authors = ["Diogo Sousa <diogogsousa@gmail.com>"]

edition = "2021"
rust-version = "1.70.0"

homepage = "https://github.com/orium/brewfatherlog"
repository = "https://github.com/orium/brewfatherlog"
documentation = "https://docs.rs/brewfatherlog"
readme = "README.md"

keywords = [
    "brewing", "fermentation", "grainfather", "brewfather", "logging"
]

license = "MPL-2.0"

# What to include when packaging.
include = [
    "/src/**/*.rs",
    "/src/**/*.toml",
    "/Cargo.toml",
    "/Cargo.lock",
    "/LICENSE.md",
    "/README.md",
    "/release-notes.md",
]

[dependencies]
tokio = { version = "1.35.0", features = ["rt-multi-thread", "macros"] }
thiserror = "1.0.51"
reqwest = { version = "0.11.23", features = ["json", "cookies"] }
serde = { version = "1.0.193", features = ["derive"] }
time = { version = "0.3.30", features = ["formatting"] }
serde_json = "1.0.108"
dirs = "5.0.1"
toml = "0.8.8"
serde_derive = "1.0.193"
simplelog = "0.12.1"
log = { version = "0.4.20", features = [] }

[features]
fatal-warnings = []

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
correctness = "deny"

enum-variant-names = "allow"
if-not-else = "allow"
inline-always = "allow"
match-bool = "allow"
missing-errors-doc = "allow"
module-name-repetitions = "allow"
needless-raw-string-hashes = "allow"
new-without-default = "allow"
non-ascii-literal = "allow"
partialeq-ne-impl = "allow"
similar-names = "allow"
single-match-else = "allow"
struct-excessive-bools = "allow"
use-self = "allow"
