[package]
name = "brewfatherlog"
description = "Log temperatures from grainfather fermenters to brewfather"
version = "0.1.3-pre"
authors = ["Diogo Sousa <diogogsousa@gmail.com>"]

edition = "2021"
rust-version = "1.70.0"

homepage = "https://github.com/orium/brewfatherlog"
repository = "https://github.com/orium/brewfatherlog"
documentation = "https://docs.rs/brewfatherlog"
readme = "README.md"

keywords = ["brewing", "fermentation", "grainfather", "brewfather", "logging"]

license = "MPL-2.0"

# What to include when packaging.
include = [
    "/src/**/*.rs",
    "/src/**/*.toml",
    "/Cargo.toml",
    "/Cargo.lock",
    "/LICENSE.md",
    "/README.md",
    "/release-notes.md",
]

[dependencies]
dirs = "5.0.1"
humantime = "2.1.0"
log = { version = "0.4.22", features = [] }
reqwest = { version = "0.12.9", features = ["json", "cookies"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_derive = "1.0.215"
serde_json = "1.0.133"
simplelog = "0.12.2"
thiserror = "2.0.3"
time = { version = "0.3.36", features = ["formatting"] }
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
toml = "0.8.19"

[features]
fatal-warnings = []

[lints.clippy]
all = { level = "warn", priority = -2 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -2 }

enum-variant-names = "allow"
if-not-else = "allow"
inline-always = "allow"
match-bool = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"
module-name-repetitions = "allow"
needless-raw-string-hashes = "allow"
new-without-default = "allow"
non-ascii-literal = "allow"
partialeq-ne-impl = "allow"
similar-names = "allow"
single-match-else = "allow"
struct-excessive-bools = "allow"
use-self = "allow"
