[package]
name = "brewfatherlog"
description = "Log temperatures from grainfather fermenters to brewfather"
version = "0.1.4-pre"
authors = ["Diogo Sousa <diogogsousa@gmail.com>"]

edition = "2024"
rust-version = "1.85.0"

homepage = "https://github.com/orium/brewfatherlog"
repository = "https://github.com/orium/brewfatherlog"
documentation = "https://docs.rs/brewfatherlog"
readme = "README.md"

keywords = ["brewing", "fermentation", "grainfather", "brewfather", "logging"]

license = "MPL-2.0"

# What to include when packaging.
include = [
    "/src/**/*.rs",
    "/src/**/*.toml",
    "/Cargo.toml",
    "/Cargo.lock",
    "/LICENSE.md",
    "/README.md",
    "/release-notes.md",
]

[dependencies]
dirs = "6.0.0"
humantime = "2.1.0"
log = { version = "0.4.25", features = [] }
reqwest = { version = "0.12.12", features = ["json", "cookies"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_derive = "1.0.218"
serde_json = "1.0.139"
simplelog = "0.12.2"
thiserror = "2.0.11"
time = { version = "0.3.37", features = ["formatting"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
toml = "0.8.20"

[features]
fatal-warnings = []

[lints.clippy]
all = { level = "warn", priority = -2 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -2 }

enum-variant-names = "allow"
if-not-else = "allow"
inline-always = "allow"
match-bool = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"
module-name-repetitions = "allow"
needless-raw-string-hashes = "allow"
new-without-default = "allow"
non-ascii-literal = "allow"
partialeq-ne-impl = "allow"
similar-names = "allow"
single-match-else = "allow"
struct-excessive-bools = "allow"
use-self = "allow"
